--- a/assets/css/loader.css
+++ b/assets/css/loader.css
@@ -7,8 +7,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #333333;
-    transition: opacity 3s, visibility 1s;
+    background: #4e4e4e;
+    transition: opacity 3s, visibility 2s;
     z-index: 1000;
 }
 
@@ -22,9 +22,9 @@
     width: 75px;
     height: 75px;
     border: 15px solid #dddddd;
-    border-top-color: #004195;
+    border-top-color: #3c7ccf;
     border-radius: 50%;
-    animation: loading 1s ease infinite;
+    animation: loading 2s ease infinite;
 }
 
 @keyframes loading {
