--- a/assets/css/parllaxcards.css
+++ b/assets/css/parllaxcards.css
@@ -57,6 +57,10 @@
     background: -o-linear-gradient(45deg,  #65696b 0%,#3d4349 100%);
     background: linear-gradient(45deg,  #65696b 0%,#3d4349 100%);
 }
+
+.back small{
+    font-size: 10px;
+}
   
 .front:after{
     position: absolute;
